Fix: Invisible text on Explorer active tab #253

--- a/src/styles.css
+++ b/src/styles.css
@@ -5247,7 +5247,6 @@ body #main-wrap group.radio input:checked + label,
 .study__members .left,
 .analyse__persistence__help,
 #analyse-cm a,
-.explorer-box .explorer-title .active,
 .explorer-box .explorer-title,
 .context-streamer,
 .tabs-horiz,
